--- a/public/index.html
+++ b/public/index.html
@@ -9,51 +9,56 @@
 </head>
 
 <body>
-    <button id="scrollToTop" class="scroll-to-top" title="Remonter en haut">↑</button>
+    <button id="scrollToTop" class="scroll-to-top" title="Remonter en haut">
+        <img src="/assets/up_arrow.svg" alt="Remonter en haut">
+    </button>
     <header>
         <div class="logo">
-            <img src="/assets/images/logo.jpg" alt="Logo de la page" width="100" height="100">
+            <a href="/public/index.html">
+                <img src="/assets/images/logo.jpg" alt="Logo de la page" width="100" height="100">
+            </a>
         </div>
-        <nav class="navbar">
-            <ul class="nav-list">
-                <li><a href="#musique" class="link-list">Musique</a></li>
-                <li><a href="#films-series" class="link-list">Films / Séries</a></li>
-                <li><a href="#jeux-videos" class="link-list">Jeux Vidéos</a></li>
-                <li><a href="#plats" class="link-list">Plats</a></li>
-            </ul>
-        </nav>
     </header>
     <main>
-        <h1 class="title-fist">Fiche présentation</h1>
+        <h1 class="title-fist">Fiche de présentation</h1>
 
         <div class="fichePresentation-Ryann">
-            <img src="/assets/images/image-ryann.png" alt="Photo de Ryann" width="200" height="200">
-            <h2 class="title-second">Ryann RENÉ-CORAIL</h2>
-            <p class="description">18 ans</p>
+            <div class="photo-ryann">
+                <img src="/assets/images/image-ryann.png" alt="Photo de Ryann">
+            </div>
+            <div class="description-ryann">
+                <h2 class="title-second">Ryann RENÉ-CORAIL</h2>
+                <p class="description">18 ans</p>
+            </div>
             <h3 class="title-third">À propos de moi</h3>
             <p class="description">Grand Amoureux du sport, je suis passé par tout les sports de ballons les plus
                 connus, ce qui m'amène
                 aujourd'hui à être passionné par le basket. En tant qu'enfant d'internet, je m'intéresse à pleins de
-                choses différentes et suis sensible à tout ce qui touche à l'art. En particulier la musique.</p>
-            <p>Je suis curieux et j'aime apprendre de nouvelles choses.</p>
-            <h3 class="title-third">Hobbies</h3>
-            <h4 id="musique" class="title-hobbies">Musique</h4>
-            <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem modi, quo tenetur
-                eum voluptates repudiandae ad consequatur sunt veniam consectetur ea ipsum voluptate rerum,
-                perspiciatis, distinctio vitae nobis quia deserunt.</p>
-            <h4 id="films-series" class="title-hobbies">Films / Séries</h4>
-            <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem modi, quo tenetur
-                eum voluptates repudiandae ad consequatur sunt veniam consectetur ea ipsum voluptate rerum,
-                perspiciatis, distinctio vitae nobis quia deserunt.</p>
-            <h4 id="jeux-videos" class="title-hobbies">Jeux Vidéos</h4>
-            <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem modi, quo tenetur
-                eum voluptates repudiandae ad consequatur sunt veniam consectetur ea ipsum voluptate rerum,
-                perspiciatis, distinctio vitae nobis quia deserunt.</p>
-            <h4 id="plats" class="title-hobbies">Plats</h4>
-            <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem modi, quo tenetur
-                eum voluptates repudiandae ad consequatur sunt veniam consectetur ea ipsum voluptate rerum,
-                perspiciatis, distinctio vitae nobis quia deserunt.</p>
-        </div>
+                choses différentes et suis sensible à tout ce qui touche à l'art. En particulier la musique.
+                Je suis curieux et j'aime apprendre de nouvelles choses.</p>
+
+            <div class="hobbies-box">
+                <div class="box">
+                    <a href="/public/pages/musique.html" class="box-link">
+                        <h3 class="title-hobbies">Musique</h3>
+                    </a>
+                </div>
+                <div class="box">
+                    <a href="/public/pages/films.html" class="box-link">
+                        <h3 class="title-hobbies">Films / Séries</h3>
+                    </a>
+                </div>
+                <div class="box">
+                    <a href="/public/pages/jeux.html" class="box-link">
+                        <h3 class="title-hobbies">Jeux Vidéos</h3>
+                    </a>
+                </div>
+                <div class="box">
+                    <a href="/public/pages/plats.html" class="box-link">
+                        <h3 class="title-hobbies">Plats</h3>
+                    </a>
+                </div>
+            </div>
     </main>
     <footer>
         <div class="links-ryann">
