--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fiche Présentation - Ryann & Thibault</title>
     <link rel="stylesheet" href="/public/style.css">
+    <link rel="stylesheet" href="/public/CSS/header.css">
+    <link rel="stylesheet" href="/public/CSS/footer.css">
+    <link rel="icon" href="/assets/ico-site.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -14,7 +17,7 @@
     </button>
     <header>
         <div class="logo">
-            <a href="/public/index.html">
+            <a href="/public/index.html" class="logoLink">
                 <img src="/assets/images/logo.jpg" alt="Logo de la page" width="100" height="100">
             </a>
         </div>
@@ -31,11 +34,11 @@
                 <p class="description">18 ans</p>
             </div>
             <h3 class="title-third">À propos de moi</h3>
-            <p class="description">Grand Amoureux du sport, je suis passé par tout les sports de ballons les plus
-                connus, ce qui m'amène
-                aujourd'hui à être passionné par le basket. En tant qu'enfant d'internet, je m'intéresse à pleins de
-                choses différentes et suis sensible à tout ce qui touche à l'art. En particulier la musique.
-                Je suis curieux et j'aime apprendre de nouvelles choses.</p>
+            <p class="description">Grand Amoureux du sport, Ryann est passé par tout les sports de ballons les plus
+                connus, ce qui l'amène
+                aujourd'hui à être passionné par le basket. En tant qu'enfant d'internet, il s'intéresse à pleins de
+                choses différentes et est sensible à tout ce qui touche à l'art. En particulier la musique.
+                Il est curieux et aime apprendre de nouvelles choses.</p>
 
             <div class="hobbies-box">
                 <div class="box">
@@ -45,7 +48,7 @@
                 </div>
                 <div class="box">
                     <a href="/public/pages/films.html" class="box-link">
-                        <h3 class="title-hobbies">Films / Séries</h3>
+                        <h3 class="title-hobbies">Films & Séries</h3>
                     </a>
                 </div>
                 <div class="box">
@@ -64,8 +67,10 @@
         <div class="links-ryann">
             <div class="practical-links">
                 <ul class="practical-list">
-                    <li><a href="#" class="practical-link-list">GitHub</a></li>
-                    <li><a href="#" class="practical-link-list">Slack</a></li>
+                    <li><a href="https://github.com/mp5daFool" class="practical-link-list" target="_blank">GitHub</a>
+                    </li>
+                    <li><a href="https://la-toile-emlyon.slack.com/team/U08JCM3211C" class="practical-link-list"
+                            target="_blank">Slack</a></li>
                 </ul>
             </div>
         </div>
