--- a/public/pages/plats.html
+++ b/public/pages/plats.html
@@ -1,14 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Les Plats préférés de Ryann</title>
+    <link rel="stylesheet" href="/public/style.css">
+    <link rel="stylesheet" href="/public/CSS/header.css">
+    <link rel="stylesheet" href="/public/CSS/footer.css">
+    <link rel="icon" href="/assets/ico-site.ico" type="image/x-icon">
 </head>
 
 <body>
-    plats
+    <button id="scrollToTop" class="scroll-to-top" title="Remonter en haut">
+        <img src="/assets/up_arrow.svg" alt="Remonter en haut">
+    </button>
+    <header>
+        <div class="logo">
+            <a href="/public/index.html" class="logoLink">
+                <img src="/assets/images/logo.jpg" alt="Logo de la page" width="100" height="100">
+            </a>
+        </div>
+    </header>
+
+    <div class="buttonBackHome">
+        <a href="/public/index.html" class="buttonBackHomeLink">Retour à l'accueil</a>
+    </div>
+
+    <footer>
+        <div class="links-ryann">
+            <div class="practical-links">
+                <ul class="practical-list">
+                    <li><a href="https://github.com/mp5daFool" class="practical-link-list" target="_blank">GitHub</a>
+                    </li>
+                    <li><a href="https://la-toile-emlyon.slack.com/team/U08JCM3211C" class="practical-link-list"
+                            target="_blank">Slack</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
