--- a/public/pages/jeux.html
+++ b/public/pages/jeux.html
@@ -25,14 +25,19 @@
 
     <div class="jeux-container">
         <div class="boxJeux">
-            <h3>Apex Legends</h3>
+
+            <a href="https://www.ea.com/games/apex-legends/apex-legends" class="linkJeux2" target="_blank">
+                <h3>Apex Legends</h3>
+            </a>
             <a href="https://www.ea.com/games/apex-legends/apex-legends" class="linkJeuxImage">
                 <img src="/assets/images/photo-ApexLegends.jpg" alt="photo du jeu Apex Legends">
             </a>
         </div>
 
         <div class="boxJeux">
-            <h3>NBA 2K</h3>
+            <a href="https://nba.2k.com/" class="linkJeux2" target="_blank">
+                <h3>NBA 2K</h3>
+            </a>
             <a href="https://nba.2k.com/" class="linkJeuxImage">
                 <img src="/assets/images/photo-NBA2K.jpg" alt="photo du jeu NBA 2K">
             </a>
