--- a/public/pages/plats.html
+++ b/public/pages/plats.html
@@ -23,6 +23,30 @@
         </div>
     </header>
 
+    <div class="plats-container">
+        <div class="boxPlats">
+            <a href="https://www.afrocuisinemagazine.com/post/recette-du-jour-riz-jollof-nigerian" class="linkPlats2"
+                target="_blank">
+                <h3>Riz Jollof Nigérian</h3>
+            </a>
+            <a href="https://www.afrocuisinemagazine.com/post/recette-du-jour-riz-jollof-nigerian"
+                class="linkPlatsImage" target="_blank">
+                <img src="/assets/images/photo-riz-joffol.png" alt="photo du plat Riz Jollof Nigérian">
+            </a>
+        </div>
+
+        <div class="boxPlats">
+            <a href="https://www.cuisineaz.com/recettes/dos-de-cabillaud-aux-epinards-12364.aspx" class="linkPlats2"
+                target="_blank">
+                <h3>Dos de cabillaud aux épinards</h3>
+            </a>
+            <a href="https://www.afrocuisinemagazine.com/post/recette-du-jour-riz-jollof-nigerian"
+                class="linkPlatsImage" target="_blank">
+                <img src="/assets/images/photo-cabilleau.jpeg" alt="photo du plat Dos de cabillaud aux épinards">
+            </a>
+        </div>
+    </div>
+
     <div class="buttonBackHome">
         <a href="/public/index.html" class="buttonBackHomeLink">Retour à l'accueil</a>
     </div>
