--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header>
         <div class="logo">
             <!-- logo et bouton du site pour retourner à l'accueil -->
-            <a href="/public/index.html" class="logoLink">
+            <a href="index.html" class="logoLink">
                 <!-- image du logo -->
                 <img src="/assets/images/logo.jpg" alt="Logo de la page" width="100" height="100">
             </a>
@@ -60,13 +60,13 @@
         <section class="hobbiesBox">
 
             <!-- bouton pour la page musique.html -->
-                <a href="/public/pages/musique.html" class="boxLink">Musique</a>
+            <a href="/public/pages/musique.html" class="boxLink">Musique</a>
             <!-- bouton pour la page films.html -->
-                <a href="/public/pages/films.html" class="boxLink">Séries</a>
+            <a href="/public/pages/films.html" class="boxLink">Séries</a>
             <!-- bouton pour la page jeux.html -->
-                <a href="/public/pages/jeux.html" class="boxLink">Vidéos</a>
+            <a href="/public/pages/jeux.html" class="boxLink">Vidéos</a>
             <!-- bouton pour la page plats.html -->
-                <a href="/public/pages/plats.html" class="boxLink">Plats</a>
+            <a href="/public/pages/plats.html" class="boxLink">Plats</a>
         </section>
     </main>
 
