--- a/public/pages/jeux.html
+++ b/public/pages/jeux.html
@@ -17,7 +17,7 @@
     </button>
     <header>
         <div class="logo">
-            <a href="/public/index.html" class="logoLink">
+            <a href="index.html" class="logoLink">
                 <img src="/assets/images/logo.jpg" alt="Logo de la page" width="100" height="100">
             </a>
         </div>
