--- a/public/pages/musique.html
+++ b/public/pages/musique.html
@@ -11,13 +11,10 @@
     <link rel="icon" href="/assets/ico-site.ico" type="image/x-icon">
 
 <body>
-    <button id="scrollToTop" class="scroll-to-top" title="Remonter en haut">
-        <img src="/assets/up_arrow.svg" alt="Remonter en haut">
-    </button>
     <header>
         <div class="logo">
-            <a href="index.html" class="logoLink">
-                <img src="/assets/images/logo.jpg" alt="Logo de la page" width="100" height="100">
+            <a href="/index.html" class="logoLink">
+                <img src="/assets/logo.jpg" alt="Logo de la page" width="100" height="100">
             </a>
         </div>
     </header>
@@ -33,7 +30,7 @@
     </div>
 
     <div class="buttonBackHome">
-        <a href="/public/index.html" class="buttonBackHomeLink">Retour à l'accueil</a>
+        <a href="/index.html" class="buttonBackHomeLink">Retour à l'accueil</a>
     </div>
 
     <footer>
