--- a/index.html
+++ b/index.html
@@ -16,19 +16,13 @@
 </head>
 
 <body>
-    <!-- bouton en bas à droite pour remonter en haut de la page lié avec scrolltotop.js-->
-    <button id="scrollToTop" class="scrollToTop" title="Remonter en haut">
-        <!-- image du bouton de flèche vers le haut -->
-        <img class="scrollToTopImage" src="/assets/up_arrow.svg" alt="Remonter en haut">
-    </button>
-
     <!-- header du site -->
     <header>
         <div class="logo">
             <!-- logo et bouton du site pour retourner à l'accueil -->
             <a href="index.html" class="logoLink">
                 <!-- image du logo -->
-                <img src="/assets/images/logo.jpg" alt="Logo de la page" width="100" height="100">
+                <img src="/assets/logo.jpg" alt="Logo de la page" width="100" height="100">
             </a>
         </div>
     </header>
@@ -40,7 +34,7 @@
         <!-- section principale avec la présentation + nom/prénom/âge -->
         <section class="fichePresentationRyann">
             <!-- photo de Ryann -->
-            <img class="photoRyannImage" src="/assets/images/image-ryann.png" alt="Photo de Ryann">
+            <img class="photoRyannImage" src="/assets/image-ryann.png" alt="Photo de Ryann">
             <!-- nom + age de Ryann -->
             <div class="descriptionRyann">
                 <h2 class="titleName">Ryann RENÉ-CORAIL</h2>
