--- a/public/pages/jeux.html
+++ b/public/pages/jeux.html
@@ -12,13 +12,10 @@
 </head>
 
 <body>
-    <button id="scrollToTop" class="scroll-to-top" title="Remonter en haut">
-        <img src="/assets/up_arrow.svg" alt="Remonter en haut">
-    </button>
     <header>
         <div class="logo">
-            <a href="index.html" class="logoLink">
-                <img src="/assets/images/logo.jpg" alt="Logo de la page" width="100" height="100">
+            <a href="/index.html" class="logoLink">
+                <img src="/assets/logo.jpg" alt="Logo de la page" width="100" height="100">
             </a>
         </div>
     </header>
@@ -30,7 +27,7 @@
                 <h3>Apex Legends</h3>
             </a>
             <a href="https://www.ea.com/games/apex-legends/apex-legends" class="linkJeuxImage">
-                <img src="/assets/images/photo-ApexLegends.jpg" alt="photo du jeu Apex Legends">
+                <img src="/assets/photo-ApexLegends.jpg" alt="photo du jeu Apex Legends">
             </a>
         </div>
 
@@ -39,13 +36,13 @@
                 <h3>NBA 2K</h3>
             </a>
             <a href="https://nba.2k.com/" class="linkJeuxImage">
-                <img src="/assets/images/photo-NBA2K.jpg" alt="photo du jeu NBA 2K">
+                <img src="/assets/photo-NBA2K.jpg" alt="photo du jeu NBA 2K">
             </a>
         </div>
     </div>
 
     <div class="buttonBackHome">
-        <a href="/public/index.html" class="buttonBackHomeLink">Retour à l'accueil</a>
+        <a href="/index.html" class="buttonBackHomeLink">Retour à l'accueil</a>
     </div>
 
     <footer>
