--- a/public/pages/plats.html
+++ b/public/pages/plats.html
@@ -12,13 +12,10 @@
 </head>
 
 <body>
-    <button id="scrollToTop" class="scroll-to-top" title="Remonter en haut">
-        <img src="/assets/up_arrow.svg" alt="Remonter en haut">
-    </button>
     <header>
         <div class="logo">
-            <a href="index.html" class="logoLink">
-                <img src="/assets/images/logo.jpg" alt="Logo de la page" width="100" height="100">
+            <a href="/index.html" class="logoLink">
+                <img src="/assets/logo.jpg" alt="Logo de la page" width="100" height="100">
             </a>
         </div>
     </header>
@@ -31,7 +28,7 @@
             </a>
             <a href="https://www.afrocuisinemagazine.com/post/recette-du-jour-riz-jollof-nigerian"
                 class="linkPlatsImage" target="_blank">
-                <img src="/assets/images/photo-riz-joffol.png" alt="photo du plat Riz Jollof Nigérian">
+                <img src="/assets/photo-riz-joffol.png" alt="photo du plat Riz Jollof Nigérian">
             </a>
         </div>
 
@@ -42,13 +39,13 @@
             </a>
             <a href="https://www.afrocuisinemagazine.com/post/recette-du-jour-riz-jollof-nigerian"
                 class="linkPlatsImage" target="_blank">
-                <img src="/assets/images/photo-cabilleau.jpeg" alt="photo du plat Dos de cabillaud aux épinards">
+                <img src="/assets/photo-cabilleau.jpeg" alt="photo du plat Dos de cabillaud aux épinards">
             </a>
         </div>
     </div>
 
     <div class="buttonBackHome">
-        <a href="/public/index.html" class="buttonBackHomeLink">Retour à l'accueil</a>
+        <a href="/index.html" class="buttonBackHomeLink">Retour à l'accueil</a>
     </div>
 
     <footer>
