--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fiche Présentation - Ryann & Thibault</title>
     <!-- feuille CSS générale -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <!-- feuille CSS pour le header -->
-    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" type="text/css" href="header.css">
     <!-- feuille CSS pour le footer -->
-    <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" type="text/css" href="footer.css">
     <!-- icone à coté du titre de la page -->
     <link rel="icon" href="/assets/ico-site.ico" type="image/x-icon">
 </head>
