--- a/plats.html
+++ b/plats.html
@@ -18,7 +18,7 @@
     <header>
         <div class="logo">
             <a href="index.html" class="logoLink">
-                <img src="/assets/logo.jpg" alt="Logo de la page" width="100" height="100">
+                <img src="assets/logo.jpg" alt="Logo de la page" width="100" height="100">
             </a>
         </div>
     </header>
